maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:9: error: value size is not a member of (Int, Int)
    var a = Coord(sol).size-1
                       ^ShortestPathMaze:31: error: type List takes type parameters
def marquage(x:Int,y:Int,sol:Int):List ={
                                  ^ShortestPathMaze:11: error: (Int, Int) does not take parameters
      Coord(sol+1)=Coord(sol+1)+marquage(Coord(sol)(0),Coord(sol)(1),sol)
                                                   ^ShortestPathMaze:11: error: (Int, Int) does not take parameters
      Coord(sol+1)=Coord(sol+1)+marquage(Coord(sol)(0),Coord(sol)(1),sol)
                                                                 ^ShortestPathMaze:12: error: value tail is not a member of (Int, Int)
      Coord(sol)=Coord(sol).tail()
                            ^ShortestPathMaze:13: error: value tail is not a member of (Int, Int)
      Coord(sol)=Coord(sol).tail()
                            ^ShortestPathMaze:31: error: type List takes type parameters
def marquage(x:Int,y:Int,sol:Int):List ={
                                  ^ShortestPathMaze:36: error: value :: is not a member of Array[Int]
      L::Array(x,y-1)
       ^ShortestPathMaze:42: error: value :: is not a member of Array[Int]
      L::Array(x-1,y)
       ^ShortestPathMaze:48: error: value :: is not a member of Array[Int]
      L=L::Array(x+1,y)
         ^ShortestPathMaze:54: error: value :: is not a member of Array[Int]
      L::Array(x,y+1)
       ^